// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render channel 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 56,
      "opacity": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "overflow": "hidden",
          "width": 40,
        },
        Object {
          "backgroundColor": "#00BCD4",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Object {
            "color": "#fff",
            "fontSize": 20,
          },
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 16,
        "marginRight": 4,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#444",
          "flex": 1,
          "fontSize": 16,
          "height": 16,
          "paddingTop": 10,
        }
      }
    >
      general
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#888",
          "flex": 1,
          "fontSize": 10,
          "height": 10,
        }
      }
    >
      11-10-2017 10:00:00
    </Text>
  </View>
</View>
`;

exports[`render no icon 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 56,
      "opacity": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 16,
        "marginRight": 4,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#444",
          "flex": 1,
          "fontSize": 16,
          "height": 16,
          "paddingTop": 10,
        }
      }
    >
      name
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#888",
          "flex": 1,
          "fontSize": 10,
          "height": 10,
        }
      }
    >
      11-10-2017 10:00:00
    </Text>
  </View>
</View>
`;

exports[`render private group 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 56,
      "opacity": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 16,
        "marginRight": 4,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#444",
          "flex": 1,
          "fontSize": 16,
          "height": 16,
          "paddingTop": 10,
        }
      }
    >
      private-group
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#888",
          "flex": 1,
          "fontSize": 10,
          "height": 10,
        }
      }
    >
      11-10-2017 10:00:00
    </Text>
  </View>
</View>
`;

exports[`render unread +999 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 56,
      "opacity": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#3F51B5",
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#ffffff",
          },
          Object {
            "fontSize": 20,
          },
        ]
      }
    >
      NA
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 16,
        "marginRight": 4,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#444",
          "flex": 1,
          "fontSize": 16,
          "height": 16,
          "paddingTop": 10,
        }
      }
    >
      name
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#888",
          "flex": 1,
          "fontSize": 10,
          "height": 10,
        }
      }
    >
      11-10-2017 10:00:00
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "backgroundColor": "#1d74f5",
        "borderRadius": 5,
        "color": "#fff",
        "fontSize": 14,
        "minWidth": 20,
        "overflow": "hidden",
        "paddingLeft": 5,
        "paddingRight": 5,
        "textAlign": "center",
      }
    }
  >
    999+
  </Text>
</View>
`;

exports[`render unread 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 56,
      "opacity": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#3F51B5",
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#ffffff",
          },
          Object {
            "fontSize": 20,
          },
        ]
      }
    >
      NA
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 16,
        "marginRight": 4,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#444",
          "flex": 1,
          "fontSize": 16,
          "height": 16,
          "paddingTop": 10,
        }
      }
    >
      name
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#888",
          "flex": 1,
          "fontSize": 10,
          "height": 10,
        }
      }
    >
      11-10-2017 10:00:00
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "backgroundColor": "#1d74f5",
        "borderRadius": 5,
        "color": "#fff",
        "fontSize": 14,
        "minWidth": 20,
        "overflow": "hidden",
        "paddingLeft": 5,
        "paddingRight": 5,
        "textAlign": "center",
      }
    }
  >
    1
  </Text>
</View>
`;

exports[`renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 56,
      "opacity": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#3F51B5",
          "borderRadius": 20,
          "height": 40,
          "width": 40,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#ffffff",
          },
          Object {
            "fontSize": 20,
          },
        ]
      }
    >
      NA
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 16,
        "marginRight": 4,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#444",
          "flex": 1,
          "fontSize": 16,
          "height": 16,
          "paddingTop": 10,
        }
      }
    >
      name
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#888",
          "flex": 1,
          "fontSize": 10,
          "height": 10,
        }
      }
    >
      11-10-2017 10:00:00
    </Text>
  </View>
</View>
`;
